--- a/Form/form.css
+++ b/Form/form.css
@@ -75,4 +75,37 @@ form button {
 }
 form button:hover {
   background-color: rgb(33, 68, 134);
+  transform: scale(1.05);
+}
+
+.succes {
+  color: green;
+  letter-spacing: 1px;
+  font-size: 2rem;
+  margin-top: 1rem;
+}
+.main-btn {
+  padding: 1rem;
+  border: none;
+  background-color: green;
+  color: white;
+  border-radius: 30px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-top: 0.5rem;
+}
+.main-btn:hover {
+  background-color: rgb(33, 68, 134);
+  transform: scale(1.05);
+}
+.main-btn-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  header {
+    min-width: 25rem;
+  }
 }
