--- a/Item/item.css
+++ b/Item/item.css
@@ -53,17 +53,18 @@ nav img {
 }
 .card img {
   width: 80%;
-  border-radius: 10px;
+  border-radius: 20px;
+  object-fit: cover;
 }
 .card h3 {
   font-size: 1.5rem;
   margin-bottom: 2rem;
 }
 .description {
-  width: 500px;
   text-align: center;
   letter-spacing: 0.7px;
   font-size: 1.1rem;
+  padding: 0 1rem;
 }
 .city {
   font-size: 1.4rem;
@@ -106,4 +107,18 @@ nav img {
   justify-content: center;
   gap: 1rem;
   margin: 2rem 0;
+}
+@media (max-width: 768px) {
+  .card {
+    width: 90%;
+    min-width: 20rem;
+    height: 600px;
+  }
+  .card img {
+    width: 90%;
+    height: 20rem;
+  }
+  header {
+    min-width: 25rem;
+  }
 }
